# The_Pirate_Game

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/config/: app.json  audio_config.json  engine_config.json  input_config.json  render_config.json  resource_config.json  window_config.json
assets/localization/: en.json
assets/prefabs/: camera_default.prefab.json
assets/prefabs/enemies/: skeleton_default.prefab.json
assets/scenes/: overworld_scene.json  settings_scene.json  title_scene.json
assets/textures/: pirate-flag.texture_atlas.json  pirate_sheet.sprite_sheet.json  settings_screen.texture_atlas.json  textures.json  title_background.texture_atlas.json
assets/textures/ui/: cog.texture_atlas.json  crossed-bones.texture_atlas.json  play-button.texture_atlas.json  sideswipe.texture_atlas.json
docs/: style_guide.txt
include/engine/: pch.h
include/engine/action/: action_registry.h  actions.h
include/engine/assets/: asset_loader.h  asset_loaders.h  asset_manager.h  asset_types.h
include/engine/audio/: audio.h  audio_controller.h
include/engine/config/: config_loader.h  config_manager.h  config_types.h
include/engine/core/: application.h  engine.h  engine_context.h  logger.h  registry_aliases.h  subsystem.h  subsystem_registry.h  type_registry.h  type_registry.hpp  types.h
include/engine/core/action/: action_registry.h  actions.h
include/engine/core/config/: config_loader.h  config_manager.h  config_types.h
include/engine/core/events/: event_bus.h  events.h
include/engine/core/localization/: localization.h
include/engine/core/settings/: engine_config.h  settings.h
include/engine/ecs/: component_manager.h  ecs_registry.h  ecs_types.h  entity.h  entity_handle.h  entity_manager.h  signature_registry.hpp  system.h  world.h
include/engine/ecs/component/: component_manager.h  component_manager.hpp  component_registry.h  component_view.hpp  core_components.h
include/engine/ecs/entity/: entity.h  entity_factory.h  entity_handle.h  entity_manager.h
include/engine/ecs/system/: animation_system.h  audio_system.h  input_system.h  interaction_system.h  render_system.h  system.h  system_manager.h  system_registry.h  system_scheduler.h  text_system.h  transform_system.h  ui_system.h
include/engine/events/: event_bus.h  events.h
include/engine/input/: input_config.h  input_handler.h
include/engine/localization/: localization.h
include/engine/math/: Math.hpp  mat3.hpp  vec2.h  vec2.hpp  vec3.hpp
include/engine/modules/: asset_module.h  audio_module.h  ecs_module.h  network_module.h  physics_module.h  platform_module.h  render_module.h  resource_module.h
include/engine/network/: network_manager.h  network_types.h  socket.h
include/engine/physics/: physics.h
include/engine/renderer/: renderer.h
include/engine/rendering/: animation_types.h  font.h  render_api.h  render_types.h  renderer.h  text.h  text_factory.h  text_renderer.h  texture.h
include/engine/resources/: audio_loader.h  audio_manager.h  engine_resources.h  font_manager.h  resource_cache.hpp  resource_handle.h  resource_loader.h  resource_manager.h  resource_manager.hpp  resource_types.h  surface.h  text_manager.h  texture_loader.h  texture_manager.h
include/engine/scenes/: scene.h  scene_stack.h
include/engine/serialization/: config_loader.h
include/engine/utils/: frame_timer.h  id_generator.h  json_utils.h  non_copyable.h  path_utils.h  string_utils.h  timer.h  type_traits.h  type_utils.h  utils.h
include/engine/window/: window.h  window_config.h
include/game/: Game.h  game.h
include/game/components/: components.h
include/game/events/: events.h
include/game/map/: map_generator.h  map_types.h  tile_map.h  tile_registry.h
include/game/scenes/: overworld_scene.h  scene.h  scene_factory.h  scene_loader.h  scene_stack.h  scene_types.h  settings_scene.h  title_scene.h
include/game/systems/: map_render_system.h  map_system.h  scene_system.h  ui_system.h
scripts/: Setup.bat  Setup.sh  clean.bat  clean.sh  run.bat  run.sh
src/engine/action/: action_registry.cpp  actions.cpp
src/engine/assets/: asset_loader.cpp  asset_loaders.cpp  asset_manager.cpp
src/engine/audio/: audio.cpp  audio_controller.cpp
src/engine/config/: config_loader.cpp  config_manager.cpp
src/engine/core/: application.cpp  engine.cpp  logger.cpp  subsystem_registry.cpp
src/engine/ecs/: ecs_registry.cpp  entity_handle.cpp  entity_manager.cpp
src/engine/events/: event_bus.cpp
src/engine/input/: input_handler.cpp
src/engine/localization/: localization.cpp
src/engine/modules/: asset_module.cpp  audio_module.cpp  ecs_module.cpp  network_module.cpp  physics_module.cpp  platform_module.cpp  render_module.cpp  resource_module.cpp
src/engine/network/: network_manager.cpp  socket.cpp
src/engine/physics/: physics.cpp
src/engine/renderer/: renderer.cpp
src/engine/rendering/: font.cpp  render_api.cpp  renderer.cpp  text_factory.cpp  text_renderer.cpp  texture.cpp
src/engine/resources/: audio_loader.cpp  resource_loader.cpp  resource_manager.cpp  surface.cpp  text_manager.cpp  texture_loader.cpp
src/engine/scenes/: scene_stack.cpp
src/engine/serialization/: config_loader.cpp
src/engine/utils/: frame_timer.cpp  json_utils.cpp  path_utils.cpp  string_utils.cpp  timer.cpp  utils.cpp
src/engine/window/: window.cpp
src/game/: game.cpp  main.cpp
src/game/map/: map_generator.cpp  tile_map.cpp  tile_registry.cpp
src/game/scenes/: overworld_scene.cpp  scene.cpp  scene_factory.cpp  scene_loader.cpp  scene_stack.cpp  settings_scene.cpp  title_scenes.cpp
src/game/systems/: map_render_system.cpp  map_system.cpp  scene_system.cpp  ui_system.cpp
(+50 files in other folders)
